--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,10 @@
 @theme {
   --font-playfair: "Playfair", serif;
 }
+
+html {
+  @apply min-h-screen;
+}
+body {
+  @apply min-h-screen h-full bg-stone-100;
+}
